--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -17,6 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="18M-3H-nNh" customClass="ParticlesView" customModule="WeatherApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </skView>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillProportionally" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="dLy-pM-AeI">
                                 <rect key="frame" x="0.0" y="54" width="414" height="798"/>
                                 <subviews>
@@ -35,7 +38,7 @@
                                         <rect key="frame" x="83" y="83" width="248" height="248.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JCV-WN-SVL">
-                                                <rect key="frame" x="0.0" y="-5" width="250.5" height="252.5"/>
+                                                <rect key="frame" x="0.0" y="-1.5" width="250.5" height="247.5"/>
                                                 <color key="tintColor" red="0.95066010639999998" green="0.99714575329999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <imageReference key="image" image="cloud.sun.fill" catalog="system" renderingMode="template"/>
                                             </imageView>
@@ -118,17 +121,27 @@
                                     <constraint firstItem="scC-J3-fs6" firstAttribute="width" secondItem="dLy-pM-AeI" secondAttribute="width" multiplier="0.6" id="E67-kb-qu8"/>
                                 </constraints>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="drY-0R-7kn">
+                                <rect key="frame" x="188.5" y="434.5" width="37" height="37"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.54169085225345626" green="0.77260363404314814" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dLy-pM-AeI" secondAttribute="bottom" constant="10" id="7Tn-cN-Aiq"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dLy-pM-AeI" secondAttribute="trailing" id="83b-6u-8P1"/>
+                            <constraint firstItem="18M-3H-nNh" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="8S3-zP-4Ng"/>
+                            <constraint firstItem="drY-0R-7kn" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="CVw-Op-04S"/>
+                            <constraint firstAttribute="bottom" secondItem="18M-3H-nNh" secondAttribute="bottom" id="LVA-fj-Cnz"/>
                             <constraint firstItem="dLy-pM-AeI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="bc2-xR-7E4"/>
+                            <constraint firstItem="drY-0R-7kn" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="rAh-7f-WGy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="18M-3H-nNh" secondAttribute="trailing" id="rSp-Jj-Mih"/>
+                            <constraint firstItem="18M-3H-nNh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sZd-Dq-gK0"/>
                             <constraint firstItem="dLy-pM-AeI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ybG-Wa-JDW"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="drY-0R-7kn" id="zy9-D1-Ko8"/>
                         <outlet property="appearentTemperatureLabel" destination="P5Z-Rn-jjP" id="tko-jb-ig2"/>
                         <outlet property="humidityLabel" destination="xOt-dg-kpK" id="ykY-pC-8iB"/>
                         <outlet property="imageView" destination="JCV-WN-SVL" id="Dfs-Oh-FoM"/>
